--- a/mydemo1/templates/mydemo1/base.html
+++ b/mydemo1/templates/mydemo1/base.html
@@ -55,7 +55,7 @@
                 {%if logged_in%}
                 <b><a class="buttonCool" style="border:0.1em solid blue; color:darkblue; background-color:transparent;" href="{% url 'welcome' %}">Home</a></b> {%else%}
                 <b><a class="buttonCool" style="border:0.1em solid blue; color:darkblue; background-color:transparent;" href="{% url 'index' %}">Home</a></b> {%endif%}
-                <b><a class="buttonCool" style="border:0.1em solid blue; color:darkblue; background-color:transparent;" href="{% url 'howtouse' %}">How to use</a></b> {%if logged_in%}
+                <b><a class="buttonCool" style="border:0.1em solid blue; color:darkblue; background-color:transparent;" href="{% url 'howtouse' %}">Help</a></b> {%if logged_in%}
 
                 <div class="options">
                     <div class="opticontext buttonCool" style="border:0.1em solid blue; color:darkblue; background-color:transparent;">
