--- a/mydemo1/templates/mydemo1/allUserOr.html
+++ b/mydemo1/templates/mydemo1/allUserOr.html
@@ -1,5 +1,28 @@
 {% extends 'mydemo1/base.html' %} {% load static %} {% block title %}All members{% endblock title %} {% block allUserOr %}
-
+<style>
+    table {
+        width: 50%;
+        border-collapse: collapse;
+    }
+    
+    table th,
+    td,
+    tr {
+        padding: 1em;
+    }
+    
+    @media (max-width: 40em) {
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        table th,
+        td,
+        tr {
+            padding: 0;
+        }
+    }
+</style>
 <div class="madeorgouter">
     <h2>Members in Organisation : {{name}}</h2>
     <br>
@@ -9,7 +32,7 @@
 			Go back
 		</a>
     </center> -->
-    <table border=1 cellpadding="10">
+    <table border=1 cellpadding="2">
         <tr>
             <th>ID</th>
             <th>First Name</th>
@@ -41,4 +64,6 @@
         {%endfor%}
     </table>
 </div>
+
+
 {%endblock allUserOr%}
