added About Us page, Image title/topic

--- a/mydemo1/static/mydemo1/css/howtouse.css
+++ b/mydemo1/static/mydemo1/css/howtouse.css
@@ -45,6 +45,15 @@
     width: max-content;
 }
 
+.itemClick:hover>.itemClickText {
+    text-decoration-color: rgb(173, 173, 173);
+}
+
+.itemClickText {
+    text-decoration: underline;
+    transition: 0ms;
+}
+
 @media (max-width: 40em) {
     .helpOuter {
         padding: 0;
