--- a/mydemo1/static/mydemo1/css/base.css
+++ b/mydemo1/static/mydemo1/css/base.css
@@ -117,6 +117,25 @@ body {
     border-radius: 0.5em;
 }
 
+#loader {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    opacity: 0.9;
+}
+
+#loader img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 @media (max-width: 40em) {
     .nav .hamburger {
         display: block;
