--- a/mydemo1/static/mydemo1/css/visitNote.css
+++ b/mydemo1/static/mydemo1/css/visitNote.css
@@ -20,6 +20,7 @@ body {
     justify-content: space-around;
     flex-direction: column;
     margin-top: 3em;
+    gap: 1em;
 }
 
 .notePicOuter .notePicMain {
@@ -57,7 +58,7 @@ body {
 }
 
 .notePicOuter .notePicMain .item:hover {
-    outline: 0.7em solid cyan;
+    outline: 0.3em solid cyan;
     transition: 250ms;
     border-radius: 1em;
 }
@@ -68,6 +69,14 @@ body {
     padding: 0em;
     object-fit: contain;
     height: 20em;
+    touch-action: pan-x pan-y pinch-zoom;
+    transform-origin: center center;
+    transform: scale(1);
+    transition: transform 0.5s;
+}
+
+.notePicOuter .selectedPic .image img.zoomed {
+    transform: scale(2);
 }
 
 .notePicOuter .selectedPic .image {
@@ -96,7 +105,7 @@ body {
 }
 
 .notePicOuter .selectedPic .controls .contBut:hover {
-    border: 0.3em solid cyan;
+    outline: 0.3em solid cyan;
 }
 
 .notePicOuter .selectedPic .controls .contBut {
