--- a/mydemo1/templates/mydemo1/uploadNotesOr.html
+++ b/mydemo1/templates/mydemo1/uploadNotesOr.html
@@ -6,10 +6,12 @@
         <form action="#" method="post" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="container">
-                <label for='note_name'><b>Title : </b></label>
+                <label for='note_name'><b>Note Title : </b></label>
                 <input type='text' placeholder="Enter note title" name='note_name' required><br><br>
                 <label for="upload"> Your file:</label>
-                <input type="file" name="upload" multiple="multiple" id="image-upload"><br><br>
+                <input type="file" name="upload" multiple="multiple" id="image-upload" required><br><br>
+                <label for='image_name'><b>Image(s) Title/Topic : </b></label>
+                <input type='text' placeholder="Enter Image(s) title" name='image_name' required><br><br>
                 <button type="submit"><b>Create</b></button><br>
             </div>
         </form>
