--- a/mydemo1/templates/mydemo1/viewNotesOr.html
+++ b/mydemo1/templates/mydemo1/viewNotesOr.html
@@ -36,8 +36,9 @@
             </div>
             <div class="action">
                 <a href="{%url 'visitNote' pk=i.0%}">Open</a>
-                <a href="{%url 'addUploaderOr' pk=i.0%}">Add Uploader</a>
                 <a href="{%url 'addPhotosNo' pk=i.0%}">Add Photos</a>
+                <a href="{%url 'addUploaderOr' pk=i.0%}">Add Uploader</a>
+                <a href="{%url 'viewUploaders' pk=i.0%}">View Uploaders</a>
                 <a href="{%url 'renameNo' pk=i.0%}">Rename Note</a>
                 <a class="deletethis" href="{%url 'deleteNote' pk=i.0%}">Delete Note</a>
             </div>
