--- a/mydemo1/templates/mydemo1/addPhotosNo.html
+++ b/mydemo1/templates/mydemo1/addPhotosNo.html
@@ -7,7 +7,7 @@
             {% csrf_token %}
             <div class="container">
                 <label for="upload"> Your file:</label>
-                <input type="file" name="upload" multiple="multiple" id="image-upload"><br><br>
+                <input type="file" name="upload" multiple="multiple" id="image-upload" required><br><br>
                 <label for='image_name'><b>Image(s) Title/Topic : </b></label>
                 <input type='text' placeholder="Enter Image(s) title" name='image_name' required><br><br>
                 <button type="submit"><b>Create</b></button><br>
