--- a/mydemo1/templates/mydemo1/aboutUs.html
+++ b/mydemo1/templates/mydemo1/aboutUs.html
@@ -71,8 +71,8 @@
             <div class="text">
                 <ul>
                     <li>
-                        <b>NoteStore</b> is Created by Team <b>NjEnX</b>. Our history began in Feb, 2023, when we heard about <b>Alibaba Global PolarDB hackathon</b> where we needed to submit a website made with using PolarDB as database which is highly
-                        advance DB, we had an Idea to create a platform that would make it easy and intuitive for users to organize and manage their notes and With <b>PolarDB</b> we thought Our Idea could become reality.
+                        <b>NoteStore</b> was created by <b>Team NjEnX</b>. Our history began in February 2023, when we learned about the <b>Alibaba Global PolarDB hackathon</b>, which required participants to create a website using <b>PolarDB</b> as a
+                        highly advanced database. We had an idea to create a platform that would make it easy and intuitive for users to organize and manage their notes. With PolarDB, we believed our idea could become a reality.
                     </li>
                     <br>
 
@@ -144,10 +144,20 @@
                 <div class="image">
                     <img src="{%static 'mydemo1/images/call.jpg' %}" alt="">
                 </div>
-                <h3>Call </h3>
+                <h3>Contact info </h3>
 
-                <div class="text">
-                    <b>Aditya Yadav</b> : +91-7879991408 <br> <b>Ananya Karne</b> : +91-94795 38955
+                <div class="text" style="font-size: medium;">
+                    <b style="font-size: medium;">E-mail:</b>
+                    <ul style="font-size: medium;">
+                        <li style="font-size: medium;">adityayadav15492002@gmail.com</li>
+                        <li style="font-size: medium;">aditya.yadav.cs.20@ggits.net</li>
+                        <li style="font-size: medium;">ananaykarne02@gmail.com</li>
+                    </ul>
+                    <b style="font-size: medium;">LinkedIn</b>
+                    <ul style="font-size: medium;">
+                        <li style="font-size: medium;">https://www.linkedin.com/in/aditya-yadav-81236a202/</li>
+                        <li style="font-size: medium;">https://www.linkedin.com/in/ananya-karne-2a3a321a8/</li>
+                    </ul>
                 </div>
             </div>
             <div class="item">
