--- a/mydemo1/templates/mydemo1/base.html
+++ b/mydemo1/templates/mydemo1/base.html
@@ -159,6 +159,9 @@
         <div>
             {% block aboutUs %} {%endblock aboutUs%}
         </div>
+        <div>
+            {% block userNotExist %} {%endblock userNotExist%}
+        </div>
     </div>
 
     <!-- <script>
