--- a/mydemo1/templates/mydemo1/home.html
+++ b/mydemo1/templates/mydemo1/home.html
@@ -20,8 +20,8 @@
         </h1>
         <br>
         <div class="options" style="display:flex; width:100%; gap:1em; justify-content: space-between;">
-            <h2><a class="buttonCool" style="background-color: rgb(255, 136, 0); color:black; outline:0.1em solid blue;" href="{% url 'signup' %}">Join Now</a></h2>
-            <h2><a class="buttonCool" style="background-color: rgb(255, 136, 0); color:black; outline:0.1em solid blue;" href="{% url 'login' %}">Login</a></h2>
+            <h2><a class="buttonCool hoverButton" href="{% url 'signup' %}">Join Now</a></h2>
+            <h2><a class="buttonCool hoverButton" href="{% url 'login' %}">Login</a></h2>
         </div>
 
 
