--- a/mydemo1/templates/mydemo1/madeorganisation.html
+++ b/mydemo1/templates/mydemo1/madeorganisation.html
@@ -31,10 +31,10 @@
                     Admin ID: {{i.2}}
                 </div>
                 <div class="options">
-                    <a href="{%url 'viewNotesOr' pk=i.0%}">View all Notes</a>
+                    <a href="{%url 'viewNotesOr' pk=i.0%}" target="_blank">View all Notes</a>
                     <a href="{%url 'uploadNotesOr' pk=i.0%}">Create New Note</a>
                     <a href="{%url 'addUserOr' pk=i.0%}">Add Users</a>
-                    <a href="{%url 'allUserOr' pk=i.0%}">View all Users</a>
+                    <a href="{%url 'allUserOr' pk=i.0%}" target="_blank">View all Users</a>
                     <a href="{%url 'renameOr' pk=i.0%}">Rename</a>
                     <a id="del" href="{%url 'deleteOr' pk=i.0%}">Delete organisation</a>
 
