--- a/mydemo1/templates/mydemo1/welcome.html
+++ b/mydemo1/templates/mydemo1/welcome.html
@@ -37,7 +37,7 @@
                     <img src="{%static 'mydemo1/images/madeorg.png' %}" alt="">
 
                 </div>
-                <h2>Organisations by Me</h2><br>
+                <h2>Organisations Created by Me</h2><br>
             </div>
         </a>
         <a href="{%url 'myorganisation' %}">
