--- a/mydemo1/static/mydemo1/css/aboutUs.css
+++ b/mydemo1/static/mydemo1/css/aboutUs.css
@@ -67,10 +67,9 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
     border-radius: 1em;
     padding: 1em;
-    width: 100%;
 }
 
 .aboutOuter .main .contactContent .item {
@@ -118,6 +117,7 @@
 
 .aboutOuter .main .contactContent {
     display: flex;
+    gap: 1em;
 }
 
 .aboutOuter .main .contactContent .item .text form .container {
@@ -162,5 +162,6 @@
         display: flex;
         flex-direction: column;
         gap: 1em;
+        width: fit-content;
     }
 }
