--- a/mydemo1/templates/mydemo1/createOrganisation.html
+++ b/mydemo1/templates/mydemo1/createOrganisation.html
@@ -6,8 +6,7 @@
         <form action="#" method="post">
             {% csrf_token %} {% load static %}
             <div class="container">
-
-                <input type='text' placeholder="Enter your Organisation name" name='org_name' required><br>
+                <input type='text' placeholder="Enter your Organisation name" name='org_name' maxlength="45" required><br>
                 <button type="submit"><b>Create</b></button><br>
             </div>
         </form>
