--- a/mydemo1/templates/mydemo1/signup.html
+++ b/mydemo1/templates/mydemo1/signup.html
@@ -6,10 +6,10 @@
             {% csrf_token %} {% load static %}
             <div class="container">
 
-                <input type='text' placeholder="Enter your first name" name='first_name' required><br>
-                <input type='text' placeholder='Enter your last name' name='last_name' required><br>
-                <input type="email" placeholder="Enter email" name="email" float="right" required><br>
-                <input type="text" placeholder="Enter Password" name="password" required><br>
+                <input type='text' placeholder="Enter your first name" name='first_name' maxlength="45" required><br>
+                <input type='text' placeholder='Enter your last name' name='last_name' maxlength="45" required><br>
+                <input type="email" placeholder="Enter email" name="email" float="right" maxlength="45" required><br>
+                <input type="text" placeholder="Enter Password" name="password" minlength="8" maxlength="255" required><br>
                 <button type="submit"><b>Signup</b></button><br>
             </div>
         </form>
