Made Debug=False

--- a/mydemo1/templates/mydemo1/myorganisation.html
+++ b/mydemo1/templates/mydemo1/myorganisation.html
@@ -1,7 +1,7 @@
 {% extends 'mydemo1/base.html' %} {% load static %} {% block title %}Organisations I'm Part of{% endblock title %} {% block myorganisation %}
 
 <div class="madeorgouter">
-    <h1>Organisations i'm part of</h1>
+    <h1>Organisations I'm part of</h1>
     <div class="madeorgmain">
         {%for i in or%}
         <div id={{i.0}} class="item">
