--- a/mydemo1/templates/mydemo1/madeorganisation.html
+++ b/mydemo1/templates/mydemo1/madeorganisation.html
@@ -8,7 +8,7 @@
 {% endif %}
 <div class="madeorgouter">
     <center>
-        <h1>Organisations i created</h1>
+        <h1>Organisations I created</h1>
     </center>
 
     <div class="madeorgmain">
