--- a/mydemo1/templates/mydemo1/welcome.html
+++ b/mydemo1/templates/mydemo1/welcome.html
@@ -18,6 +18,9 @@
         <h1 class="nicetext">
             <span style="color: black;"> Welcome: </span>{{fname}} {{lname}}
         </h1>
+        <h1 class="nicetext">
+            <span style="color: black;"> User id: </span>{{user_id}}
+        </h1>
     </center>
     <div class="welcomemain">
 
