--- a/mydemo1/templates/mydemo1/welcome.html
+++ b/mydemo1/templates/mydemo1/welcome.html
@@ -16,7 +16,7 @@
 <div class="outerwelcome">
     <center>
         <h1 class="nicetext">
-            <span style="color: black;"> Welcome: </span>{{fname}} {{lname}}
+            <span style="color: black;"> Welcome: </span>{{fname}} {{lname}}<br>
             <span style="color: black;"> User id: </span>{{user_id}}
         </h1>
         <!-- <h1 class="nicetext">
